Adiciona resultados dos status de rede: ótima, mediana, ruim

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,6 @@
         "**/*_adt.pvs": false,
         "**/*.log": true,
         "**/.vscode": true
-    }
+    },
+    "workbench.activityBar.iconClickBehavior": "toggle"
 }
